<resources>
    <string name="app_name">NYTimes-android</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Find article...</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="beginDate">BeginDate</string>
    <string name="sortOrder">Sort Order</string>
    <string name="newsDesk">News Desk Values</string>
    <string name="arts">Arts</string>
    <string name="fashion"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string-array name="array_sortOrder">
        <item>Oldest</item>
        <item>Newest</item>
    </string-array>
</resources>
