<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context="com.psd.nytimes.activities.SettingsFragment">

    <TextView
        android:id="@+id/tvBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/beginDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/etBeginDate"
        android:layout_below="@+id/tvBeginDate"
        android:layout_alignLeft="@+id/tvBeginDate"
        android:layout_alignStart="@+id/tvBeginDate" />

    <TextView
        android:id="@+id/tvSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sortOrder"
        android:layout_below="@+id/etBeginDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sortOrderSpinner"
        android:entries="@array/array_sortOrder"
        android:layout_alignTop="@+id/tvSortOrder"
        android:layout_toRightOf="@+id/tvBeginDate"
        android:layout_toEndOf="@+id/tvBeginDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/newsDesk"
        android:id="@+id/tvNewsDeskValues"
        android:layout_below="@+id/tvSortOrder"
        android:layout_alignLeft="@+id/tvSortOrder"
        android:layout_alignStart="@+id/tvSortOrder"
        android:layout_marginTop="60dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arts"
        android:id="@+id/cbArts"
        android:layout_below="@+id/tvNewsDeskValues"
        android:layout_alignLeft="@+id/etBeginDate"
        android:layout_alignStart="@+id/etBeginDate"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fashion"
        android:id="@+id/cbFashion"
        android:layout_below="@+id/cbArts"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts"
        android:checked="false" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        android:id="@+id/cbSports"
        android:layout_below="@+id/cbFashion"
        android:layout_alignLeft="@+id/cbFashion"
        android:layout_alignStart="@+id/cbFashion"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:textColor="#FFF"
        android:id="@+id/btnSave"
        android:background="@android:color/holo_purple"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

</RelativeLayout>
